[gd_scene load_steps=65 format=1]

[ext_resource path="res://Soldato.gd" type="Script" id=1]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_0.png" type="Texture" id=2]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_1.png" type="Texture" id=3]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_2.png" type="Texture" id=4]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_3.png" type="Texture" id=5]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_4.png" type="Texture" id=6]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_5.png" type="Texture" id=7]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_6.png" type="Texture" id=8]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_7.png" type="Texture" id=9]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_8.png" type="Texture" id=10]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_9.png" type="Texture" id=11]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_10.png" type="Texture" id=12]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_11.png" type="Texture" id=13]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_12.png" type="Texture" id=14]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_13.png" type="Texture" id=15]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_14.png" type="Texture" id=16]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_15.png" type="Texture" id=17]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_16.png" type="Texture" id=18]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_17.png" type="Texture" id=19]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_18.png" type="Texture" id=20]
[ext_resource path="res://k/handgun/idle/survivor-idle_handgun_19.png" type="Texture" id=21]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_0.png" type="Texture" id=22]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_1.png" type="Texture" id=23]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_2.png" type="Texture" id=24]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_3.png" type="Texture" id=25]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_4.png" type="Texture" id=26]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_5.png" type="Texture" id=27]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_6.png" type="Texture" id=28]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_7.png" type="Texture" id=29]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_8.png" type="Texture" id=30]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_9.png" type="Texture" id=31]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_10.png" type="Texture" id=32]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_11.png" type="Texture" id=33]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_12.png" type="Texture" id=34]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_13.png" type="Texture" id=35]
[ext_resource path="res://k/handgun/reload/survivor-reload_handgun_14.png" type="Texture" id=36]
[ext_resource path="res://k/handgun/shoot/survivor-shoot_handgun_0.png" type="Texture" id=37]
[ext_resource path="res://k/handgun/shoot/survivor-shoot_handgun_1.png" type="Texture" id=38]
[ext_resource path="res://k/handgun/shoot/survivor-shoot_handgun_2.png" type="Texture" id=39]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_0.png" type="Texture" id=40]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_1.png" type="Texture" id=41]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_2.png" type="Texture" id=42]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_3.png" type="Texture" id=43]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_4.png" type="Texture" id=44]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_5.png" type="Texture" id=45]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_6.png" type="Texture" id=46]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_7.png" type="Texture" id=47]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_8.png" type="Texture" id=48]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_9.png" type="Texture" id=49]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_10.png" type="Texture" id=50]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_11.png" type="Texture" id=51]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_12.png" type="Texture" id=52]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_13.png" type="Texture" id=53]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_14.png" type="Texture" id=54]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_15.png" type="Texture" id=55]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_16.png" type="Texture" id=56]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_17.png" type="Texture" id=57]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_18.png" type="Texture" id=58]
[ext_resource path="res://k/handgun/move/survivor-move_handgun_19.png" type="Texture" id=59]
[ext_resource path="res://Sonoj/217805__gattoangus__9mm-pistol-shoot-short-reverb.ogg" type="AudioStream" id=60]
[ext_resource path="res://Sonoj/169195__paul368__berretta-9m-cocking-double-fast.ogg" type="AudioStream" id=61]
[ext_resource path="res://Sonoj/387481__cosmicembers__empty-gun-failure-to-fire-trigger-pull-2.ogg" type="AudioStream" id=62]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 120.015

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "senkulpa",
"speed": 25.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ) ],
"loop": false,
"name": "resxargxi",
"speed": 25.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": false,
"name": "pafi",
"speed": 18.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ) ],
"loop": true,
"name": "movi",
"speed": 40.0
} ]

[node name="Soldato" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -4.91092, 14.7328 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 5
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Aspekto" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 2, 0 )
transform/rot = -90.0
frames = SubResource( 2 )
animation = "senkulpa"
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -4.91092, 14.7328 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Kuglo_elirejo" type="Node2D" parent="."]

transform/pos = Vector2( -49.1095, 151.012 )

[node name="Pafi_sono" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 60 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Resxargxi_sono" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 61 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Pafi_malplene_sono" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 62 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="finished" from="Aspekto" to="." method="_on_Aspekto_finished"]


